# events_api

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_create_users_table.py  0a40e8a0e6c8_create_events_table.py  200513ca35f1_create_event_participant_table.py  258e4710d2c0_create_sessions_table.py  76ce079af950_create_user_table.py  a04b8cda648e_create_user_table.py
src/: config.py  database.py  main.py
src/auth/api/: dependencies.py  routes.py  schemas.py
src/auth/domain/: contracts.py  exceptions.py  models.py  repositories.py
src/auth/infrastructure/bootstrap/: seed_admin.py
src/auth/infrastructure/database/models/: user.py
src/auth/infrastructure/security/: bcrypt_password_hasher.py  jwt_token_service.py
src/auth/use_cases/: get_current_user.py  login_user.py  register_user.py
src/event/api/: dependencies.py  routes.py  schemas.py
src/event/domain/: exceptions.py  models.py  repositories.py
src/event/use_cases/: create_event.py  create_session.py  delete_event.py  delete_session.py  get_event.py  leave_event.py  list_events.py  list_my_events.py  participate_in_event.py  search_events.py  update_event.py  update_session.py
tests/: conftest.py
tests/auth/api/: test_routes.py
tests/auth/domain/: test_models.py
tests/auth/infrastructure/bootstrap/: test_seed_admin.py
tests/auth/use_cases/: test_get_current_user.py  test_login_user.py  test_register_user.py
tests/event/api/: test_routes.py
tests/event/domain/: test_models.py
tests/event/use_cases/: test_create_event.py  test_create_session.py  test_delete_event.py  test_get_event.py  test_leave_event.py  test_list_events.py  test_list_my_events.py  test_participate_in_event.py  test_search_events.py  test_update_event.py  test_update_session.py
(+6 files in other folders)
